# Workspace root for the Resonant Dust client (a submodule). Split into:
#   core/  resonantdust-client-core  (rlib + the NPC `client` bin) — pure logic
#   wasm/  resonantdust-client        (cdylib) — the view-facing wasm wrapper
# NPCs/harness build `-p resonantdust-client-core` (native); the view builds
# `-p resonantdust-client` for wasm32. The render/graphics-facing code (render_region,
# trees-as-cards) lives ONLY in the wasm crate, so the headless core can't link it.
[workspace]
members = ["core", "wasm"]
resolver = "2"
